tests/NormalTests/paczka1/fuzzy1/10826947.err
Error in line 8: Somh5YTdfTz A29 80,4
Error in line 19: 8vtc51K S93 32,3
Error in line 24: 8vtc51K S693 79,5
Error in line 27: 8vtc51K S93 91,5
Error in line 20: Kt9JCx2uk A29 22,0
Error in line 16: VYUQBILf2 S693 262,6
Error in line 38: Hvtc51K S93 57,H
